--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
+altgraph==0.17.4
+packaging==24.1
 pillow==10.4.0
+pyinstaller==6.10.0
+pyinstaller-hooks-contrib==2024.8
 pypng==0.20220715.0
 qrcode==7.4.2
+setuptools==74.0.0
 typing_extensions==4.12.2
 argparse==1.4.0
